--- a/css/gstyles.css
+++ b/css/gstyles.css
@@ -230,5 +230,17 @@ a {
 
 .search {
     text-align: center;
-    size: 100px;
+    height: 50px;
+    width: 250px;
+    border-radius: 10px;
+    background-color: rgb(52, 49, 49);
+    color: #FFF;
+    font-size: 20px;
+}
+
+.game_title {
+    text-align: center;
+    font-size: 50px;
+    color: #FFF;
+    top: 5%;
 }
